# obj-viewer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL_IMAGE.cmake
shaders/: lambertian.fs  lambertian.vs  simple.fs  simple.vs
src/: Arcball.cpp  Arcball.hpp  Main.cpp  Math.cpp  Math.hpp  Matrix.hpp  Model.cpp  Model.hpp  ObjParser.cpp  ObjParser.hpp  Shaders.cpp  SmartPtr.hpp  Viewer.cpp  Viewer.hpp
src/Math/: Matrix3.hpp  Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
